created header and footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,13 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
-  <body>
+  <body class="d-flex flex-column min-vh-100">
+
    <p class="notice"><%= notice %></p>
    <p class="alert"><%= alert %></p>
    <%= render "shared/navbar" %>
    <%= yield %>
+   <%= render "shared/footer" %>
 
   </body>
 </html>
