--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,7 +20,7 @@
       <!-- Left links -->
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#">Dolls</a>
+        <%= link_to "Dolls", dolls_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">My profile</a>
@@ -34,4 +34,3 @@
   </div>
   <!-- Container wrapper -->
 </nav>
-
