--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,3 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<%= cl_image_tag("creepy_dolls_bg",
+      width: 400, height: 300, crop: :fill) %>
+
