--- a/app/views/dolls/index.html.erb
+++ b/app/views/dolls/index.html.erb
@@ -3,3 +3,5 @@
 <% @dolls.each do |doll| %>
   <p><%= link_to doll.name, doll_path(doll)%></p>
 <% end %>
+
+<%= link_to "Create a new doll", new_doll_path %>
