background image on landing page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
-<%= cl_image_tag("creepy_dolls_bg",
-      width: 400, height: 300, crop: :fill) %>
-
+<div style="background-image: url('https://res.cloudinary.com/dug5dmhjs/image/upload/v1661258206/production/creepy_dolls_bg_wuzodu.jpg'); height: 100vh; background-size:100% 100%;">
+  <div>
+    
+  </div>
+</div>
