--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,12 @@
 
   <body class="d-flex flex-column min-vh-100">
 
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-
     <%# Show navbar if not on landing page %>
-    <%= render "shared/navbar" if controller_name != 'pages' && action_name != 'home' %>
+    <% if controller_name != 'pages' && action_name != 'home' %>
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+      <%= render "shared/navbar"  %>
+    <% end %>
 
     <%= yield %>
 
