--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,5 +1,13 @@
 // Define variables for your color scheme
 
+
+$mint-green: #EFF9F0;
+$pale-silver:  #DDC8C4;
+$deep-taupee: #896A67;
+$eggplant: #6B4D57;
+$xicketic: #13070C;
+
+
 // For example:
 $red: #FD1015;
 $blue: #0D6EFD;
@@ -7,4 +15,4 @@ $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
-$light-gray: #F4F4F4;
+$light-gray: #DDC8C4;
