--- a/app/views/dolls/show.html.erb
+++ b/app/views/dolls/show.html.erb
@@ -18,6 +18,6 @@
  </div>
 </div>
 
-<div class="text-decoration-none container mt-4 mb-4 p-3 d-flex justify-content-center ">
+<div class="container mt-4 mb-4 p-3 d-flex justify-content-center ">
 <%=  link_to '<< Go back', dolls_path %>
 </div>
