--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light">
   <div class="container-fluid">
     <a class="navbar-brand" >Delightful Dolls</a>
     <button
@@ -16,15 +16,13 @@
     <div class="collapse navbar-collapse" id="navbarRightAlignExample">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-        <%= link_to "Dolls", dolls_path, class: "nav-link" %>
+          <%= link_to "Dolls", dolls_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">My profile</a>
         </li>
         <li class="nav-item">
           <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link" %>
-        </li>
-
         </li>
       </ul>
     </div>
