--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <section class="bg-light landing-page">
-    <div class="container">
-        <div class="row">
+    <div class="container d-flex justify-content-center pt-5">
+        <div class="row align-items-center text-center">
             <div class="col-lg-6 order-2 order-lg-1">
                 <h1>Delightful Dolls</h1>
                 <p class="lead">Feeling loney? </p>
@@ -14,17 +14,3 @@
     </div>
 </div>
 </section>
-
-
-
-
-
-
-
-<%#
-
-<div class="container landing-page">
-    <div class="content">
-          <img src="https://res.cloudinary.com/dug5dmhjs/image/upload/v1661282164/production/doll_bg_coxdrr.png" alt="">
-    </div>
-</div> %>
