changed font size

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
             <div class="col-lg-6 order-2 order-lg-1">
                 <h1>Delightful Dolls</h1>
                 <p class="lead">Feeling loney? </p>
-                <p class="lead">Missing that special someone in your life?</p>
+                <p class="lead">Your loneliness ends now!</p>
                 <p class="lead">Rent a doll and find inner peace. </p>
                 <%= link_to "Log in", new_user_session_path, class: "btn btn-primary shadow mr-2" %>
                 <%# <p><a href="#" class="btn btn-primary shadow mr-2">Log in</a> %>
