--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,5 +1,13 @@
 // Define variables for your color scheme
 
+
+$mint-cream: #eff9f0;
+$pale-silver: #DDC8C4;
+$deep-taupe: #896A67;
+$eggplant: #6B4D57;
+$xicketic: #13070C;
+
+
 // For example:
 $red: #FD1015;
 $blue: #0D6EFD;
