--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,9 +5,12 @@ a {
 
 .landing-page {
   color: aliceblue;
-  height: 100vh;
-  background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url(https://res.cloudinary.com/dug5dmhjs/image/upload/v1661289383/production/dolls_bg_guwg8l.jpg);
-  background-size:100% 100%;
+  height: 70vh;
+  background-color: #6b4d57;
+  background-image: linear-gradient(181deg, #6b4d57 0%, #896a67 45%, #ddc8c4 100%);
+
+  // background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url(https://res.cloudinary.com/dug5dmhjs/image/upload/v1661289383/production/dolls_bg_guwg8l.jpg);
+  // background-size:100% 100%;
 
   h1 {
     font-family: 'DynaPuff', cursive;
