--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,4 +13,18 @@
         <div class="col-lg-6 order-1 order-lg-2"><img src="https://res.cloudinary.com/dug5dmhjs/image/upload/v1661282164/production/doll_bg_coxdrr.png" alt="landing image" class="img-fluid"></div>
     </div>
 </div>
+
 </section>
+<div class="container">
+  <div class="row">
+    <div class="col-4">
+      card 1
+    </div>
+    <div class="col-4">
+      card 2
+    </div>
+    <div class="col-4">
+      card 3
+    </div>
+  </div>
+</div>
