--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <section class="bg-light landing-page">
-    <div class="container d-flex justify-content-center pt-5">
+    <div class="container d-flex justify-content-center">
         <div class="row align-items-center text-center">
-            <div class="col-lg-6 order-2 order-lg-1">
+            <div class="col-lg-6 order-2 order-lg-1 border sign-in">
                 <h1>Delightful Dolls</h1>
                 <p class="lead">Feeling loney? </p>
                 <p class="lead">Your loneliness ends now!</p>
