--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,18 +1,23 @@
 <section class="bg-light landing-page">
-    <div class="container d-flex justify-content-center">
-        <div class="row align-items-center text-center">
-            <div class="col-lg-6 order-2 order-lg-1 border sign-in">
-                <h1>Delightful Dolls</h1>
-                <p class="lead">Feeling loney? </p>
-                <p class="lead">Your loneliness ends now!</p>
-                <p class="lead">Rent a doll and find inner peace. </p>
-                <%= link_to "Log in", new_user_session_path, class: "btn btn-primary shadow mr-2" %>
-                <%# <p><a href="#" class="btn btn-primary shadow mr-2">Log in</a> %>
-                <a href="#" class="btn btn-outline-primary">Sign up</a></p>
-            </div>
-        <div class="col-lg-6 order-1 order-lg-2"><img src="https://res.cloudinary.com/dug5dmhjs/image/upload/v1661282164/production/doll_bg_coxdrr.png" alt="landing image" class="img-fluid"></div>
+  <div class="container d-flex justify-content-center">
+    <div class="row align-items-center text-center">
+      <div class="col-lg-6 order-2 order-lg-1 border sign-in">
+        <h1>Delightful Dolls</h1>
+        <p class="lead">Feeling loney? </p>
+        <p class="lead">Your loneliness ends now!</p>
+        <p class="lead">Rent a doll and find inner peace. </p>
+        <%= link_to "Log in", new_user_session_path, class: "btn btn-primary shadow mr-2" %>
+        <%# <p><a href="#" class="btn btn-primary shadow mr-2">Log in</a> %>
+        <a href="#" class="btn btn-outline-primary">Sign up</a></p>
+      </div>
+
+      <div></div>
+
+      <div class="col-lg-6 order-1 order-lg-2">
+        <img src="https://res.cloudinary.com/dug5dmhjs/image/upload/v1661282164/production/doll_bg_coxdrr.png" alt="landing image" class="img-fluid">
+      </div>
     </div>
-</div>
+  </div>
 
 </section>
 <div class="container">
