--- a/app/views/dolls/show.html.erb
+++ b/app/views/dolls/show.html.erb
@@ -13,7 +13,7 @@
     <span class="name mt-3" ><%= @doll.name %></span>
     <span class="state mt-3">cursed: <%=curse%></span>
     <span class="condition mt-3">condition: <%= @doll.condition %></span>
-    <span class="condition mt-3">description: <%= %></span>
+    <span class="condition mt-3">description: <%= @doll.description %></span>
   </div>
  </div>
 </div>
