--- a/app/views/dolls/new.html.erb
+++ b/app/views/dolls/new.html.erb
@@ -3,6 +3,7 @@
 <%= simple_form_for (@doll) do |f| %>
   <%= f.input :name %>
   <%= f.input :condition %>
+  <%= f.input :description %>
   <%= f.input :cursed, as: :boolean %>
   <%= f.submit %>
 <% end %>
