tidied up login page

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -10,9 +10,6 @@ a {
   background-image: linear-gradient(181deg, #6b4d57 0%, #896a67 45%, #ddc8c4 100%);
   padding-top: 50px;
 
-  // background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url(https://res.cloudinary.com/dug5dmhjs/image/upload/v1661289383/production/dolls_bg_guwg8l.jpg);
-  // background-size:100% 100%;
-
   h1 {
     font-family: 'DynaPuff', cursive;
     text-shadow: 0px 3px 0px #b2a98f,
@@ -48,4 +45,13 @@ a {
     // border-color: #896a67;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
+}
+
+.login {
+  width: 400px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  padding: 50px;
+  background-color:#ddc8c4;
+  border-radius: 5px;
 }
