--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,17 +15,19 @@
 
     <div class="collapse navbar-collapse" id="navbarRightAlignExample">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-        <%= link_to "Dolls", dolls_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">My profile</a>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link" %>
-        </li>
+        <% if controller_name != 'sessions' && action_name != 'new' %>
+          <li class="nav-item">
+          <%= link_to "Dolls", dolls_path, class: "nav-link" %>
+          </li>
 
-        </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">My profile</a>
+          </li>
+
+          <li class="nav-item">
+            <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link" %>
+          </li>
+        <% end %>
       </ul>
     </div>
   </div>
