--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,17 +1,37 @@
 .btn-ghost {
   color: black;
+  width: 20%;
   border: 1px solid #4A4A4A;
-  padding: 8px 24px;
+  text-align: center;
   border-radius: 50px;
   font-weight: lighter;
   opacity: 0.6;
   transition: opacity 0.3s ease;
   text-decoration: none;
+  background: $pale-silver;
 }
 
 .btn-ghost:hover {
-  opacity: 1;
-  color: #4A4A4A;
+  background: $deep-taupe;
+  color: black;
+  text-decoration: none;
+}
+.btn-ghost-log-out {
+  color: black;
+  border: 1px solid #4A4A4A;
+  width: 30%;
+  text-align: center;
+  border-radius: 50px;
+  font-weight: lighter;
+  opacity: 0.6;
+  transition: opacity 0.3s ease;
+  text-decoration: none;
+  background: $mint-cream;
+}
+
+.btn-ghost-log-out:hover {
+  background: $deep-taupe;
+  color: black;
   text-decoration: none;
 }
 
