--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -23,7 +23,7 @@
                 input_html: { autocomplete: "current-password" } %>
   </div>
 
-  <div class="form-actions">
+  <div class="form-actions btn-ghost-log-out mb-3 mt-2">
     <%= f.button :submit, "Update" %>
   </div>
 <% end %>
