--- a/app/views/dolls/index.html.erb
+++ b/app/views/dolls/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container  mt-5">
+<div class="container  mt-3">
   <h1 class="mt-2">Dolls</h1>
 
 <div class="cards">
@@ -13,7 +13,7 @@
     </div>
     <% end %>
 </div>
-  <div class="btn btn-ghost mb-5 mt-3">
+  <div class="btn-ghost pt-2 pb-2 mb-5 mt-2">
     <%= link_to "Create a new doll", new_doll_path %>
   </div>
 </div>
