--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,9 +6,9 @@
         <p class="lead">Feeling loney? </p>
         <p class="lead">Your loneliness ends now!</p>
         <p class="lead">Rent a doll and find inner peace. </p>
-        <%= link_to "Log in", new_user_session_path, class: "btn btn-primary shadow mr-2" %>
+        <%= link_to "Log in", new_user_session_path, class: "btn-ghost-log-out p-2 mb-5 mt-2" %>
         <%# <p><a href="#" class="btn btn-primary shadow mr-2">Log in</a> %>
-        <a href="#" class="btn btn-outline-primary">Sign up</a></p>
+        <a href="#" class="btn-ghost-log-out p-2 mb-5 mt-2">Sign up</a></p>
       </div>
 
       <div></div>
