--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -47,6 +47,13 @@ a {
   }
 }
 
+  .create {
+    background-color: $pale-silver;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  }
+
+
 .login {
   width: 400px;
   margin-top: 50px;
