--- a/app/views/dolls/new.html.erb
+++ b/app/views/dolls/new.html.erb
@@ -1,12 +1,15 @@
-<div class="container  mt-3">
+<div class="container mt-3">
+
+<div class="w-50 mt-5 mb-5 p-3 mx-auto create">
   <h1>Create a new doll</h1>
   <%= simple_form_for (@doll) do |f| %>
     <%= f.input :name %>
     <%= f.input :condition %>
     <%= f.input :description %>
     <%= f.input :cursed, as: :boolean %>
-    <div class="btn btn-ghost mb-5 mt-2">
+    <div class="btn-ghost mb-5 mt-2">
       <%= f.submit %>
     </div>
   <% end %>
+</div>
 </div>
