--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand $headers-font" >Delightful Dolls</a>
+    <%# <a class="navbar-brand $headers-font" >Delightful Dolls</a> %>
+    <%= link_to "Delightful Dolls", dolls_path, class: "navbar-brand $headers-font" %>
     <button
       class="navbar-toggler"
       type="button"
