--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,8 +20,23 @@
   </div>
 
 </section>
-<div class="container">
-  <div class="row">
+<div class="container justify-content-between">
+  <div class="cards">
+    <% @dolls.each do |doll| %>
+    <div class="card-product mt-2 mb-3">
+        <img src="assets/doll.jpg" />
+        <div class="card-product-infos">
+          <h2 class="large-font"><%= link_to "#{doll.name.capitalize}", doll_path(doll)%></h2>
+          <p><strong>Condition:</strong><%= "  #{doll.condition.capitalize}" %></p>
+          <p><strong>Cursed:</strong><%= "  #{doll.cursed}" %></p>
+        </div>
+    </div>
+    <% end %>
+</div>
+</div>
+
+
+ <%# <div class="row">
     <div class="col-4">
       card 1
     </div>
@@ -31,5 +46,4 @@
     <div class="col-4">
       card 3
     </div>
-  </div>
-</div>
+  </div> %>
