--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,10 +2,18 @@
   justify-content: space-between;
   background: $deep-taupe;
   height: 20%;
+
+}
+.navbar * {
+  color: white;
 }
 
 .navbar .navbar-collapse {
   flex-grow: 0;
+}
+
+.navbar .navbar-collapse * {
+  color: white;
 }
 
 .navbar .navbar-brand img {
@@ -16,4 +24,9 @@
 .navbar-brand {
   font-family: $headers-font;
   font-size: 35px;
+  color: white;
+}
+
+.navbar .navbar-brand a {
+  color: white;
 }
