--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,6 +1,7 @@
 .btn-ghost {
   color: black;
-  width: 20%;
+  padding-left: 12px;
+  padding-right: 12px;
   border: 1px solid #4A4A4A;
   text-align: center;
   border-radius: 50px;
@@ -19,7 +20,7 @@
 .btn-ghost-log-out {
   color: black;
   border: 1px solid #4A4A4A;
-  width: 30%;
+  width: 20%;
   text-align: center;
   border-radius: 50px;
   font-weight: lighter;
@@ -35,7 +36,12 @@
   text-decoration: none;
 }
 
-a:visited {
+.btn-ghost a:visited {
+  opacity: 1;
+  color: black;
+  text-decoration: none;
+}
+.btn-ghost-log-out a:visited {
   opacity: 1;
   color: black;
   text-decoration: none;
