--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 
-<div class="container  mt-5">
+<div class="container  mt-5 w-50">
   <h2>Sign up</h2>
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name),
@@ -20,7 +20,7 @@
                   input_html: { autocomplete: "new-password" } %>
     </div>
 
-    <div class="form-actions btn-ghost mb-3 mt-2">
+    <div class="form-actions btn-ghost mb-3 mt-4">
       <%= f.button :submit, "Sign up" %>
     </div>
   <% end %>
