--- a/app/views/dolls/new.html.erb
+++ b/app/views/dolls/new.html.erb
@@ -7,9 +7,8 @@
     <%= f.input :condition %>
     <%= f.input :description %>
     <%= f.input :cursed, as: :boolean %>
-    <div class="btn-ghost mb-5 mt-2">
-      <%= f.submit %>
-    </div>
+    <%= f.submit 'Create a new doll', class: "btn btn-ghost mb-5 mt-2" %>
+
   <% end %>
 </div>
 </div>
