--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,17 +1,7 @@
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
-    <a class="navbar-brand $headers-font" >Delightful Dolls</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-mdb-toggle="collapse"
-      data-mdb-target="#navbarRightAlignExample"
-      aria-controls="navbarRightAlignExample"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <i class="fas fa-bars"></i>
-    </button>
+       <%= link_to "Delightful Dolls", dolls_path, class: "navbar-brand $headers-font" %>
+
 
     <div class="collapse navbar-collapse" id="navbarRightAlignExample">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
