--- a/app/views/dolls/show.html.erb
+++ b/app/views/dolls/show.html.erb
@@ -6,20 +6,20 @@
   <% curse = "no" %>
   <% end %>
 
-<div class="container">
+<div class="container w-50">
   <div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
-  <div class="card p-4 bg-light.bg-gradient">
-    <div class=" image d-flex flex-column justify-content-center align-items-center">
-      <img src="#" height="150" width="150">
-      <span class="name mt-3" ><%= @doll.name %></span>
-      <span class="state mt-3">cursed: <%=curse%></span>
-      <span class="condition mt-3">condition: <%= @doll.condition %></span>
-      <span class="condition mt-3">description: <%= @doll.description %></span>
+    <div class="card p-4 bg-light.bg-gradient">
+      <div class=" image d-flex flex-column justify-content-center align-items-center">
+        <img src="<%= @doll.image %>" height="150" width="150">
+        <span class="name mt-3" ><%= @doll.name %></span>
+        <span class="state mt-3">Cursed: <%=curse%></span>
+        <span class="condition mt-3">Condition: <%= @doll.condition %></span>
+        <span class="condition mt-3"><strong>Description: </strong><%= @doll.description %></span>
+      </div>
     </div>
   </div>
-  </div>
-  <div class="btn btn-ghost mb-5 mt-3">
-  <%=  link_to '<< Go back', dolls_path %>
+  <div class="container d-flex align-items-center justify-content-center">
+    <%=  link_to 'Go back', dolls_path, class:"btn btn-ghost mb-5 mt-3 mx-auto" %>
   </div>
 
-<div>
+</div>
