--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <section class="bg-light landing-page">
   <div class="container d-flex justify-content-center">
     <div class="row align-items-center text-center">
-      <div class="col-lg-6 order-2 order-lg-1 border sign-in">
+      <div class="col-lg-6 order-2 order-lg-1 border sign-in mt-5">
         <h1>Delightful Dolls</h1>
         <p class="lead">Feeling loney? </p>
         <p class="lead">Your loneliness ends now!</p>
@@ -20,11 +20,12 @@
   </div>
 
 </section>
-<div class="container justify-content-between">
+<div class="container justify-content-between mt-5">
+<h1>Want to find out more...</h1>
   <div class="cards">
-    <% @dolls.each do |doll| %>
-    <div class="card-product mt-2 mb-3">
-        <img src="assets/doll.jpg" />
+    <% @dolls.limit(3).each do |doll| %>
+    <div class="card-product mt-3 mb-3">
+        <img src="<%= doll.image %>">
         <div class="card-product-infos">
           <h2 class="large-font"><%= link_to "#{doll.name.capitalize}", doll_path(doll)%></h2>
           <p><strong>Condition:</strong><%= "  #{doll.condition.capitalize}" %></p>
