--- a/app/views/dolls/index.html.erb
+++ b/app/views/dolls/index.html.erb
@@ -3,14 +3,16 @@
 
 <div class="cards">
   <% @dolls.each do |doll| %>
-    <div class="card-product mt-2 mb-3">
-        <img src="<%= doll.image %>">
-        <div class="card-product-infos">
-          <h2 class="large-font"><%= link_to "#{doll.name.capitalize}", doll_path(doll)%></h2>
-          <p><strong>Condition:</strong><%= "  #{doll.condition.capitalize}" %></p>
-          <p><strong>Cursed:</strong><%= "  #{doll.cursed}" %></p>
-        </div>
-    </div>
+    <%= link_to doll_path(doll) do %>
+      <div class="card-product mt-2 mb-3">
+            <img src="<%= doll.image %>">
+            <div class="card-product-infos">
+              <h2 class="large-font"><%= doll.name.capitalize %></h2>
+              <p><strong>Condition: </strong><%= doll.condition.capitalize %></p>
+              <p><strong>Cursed: </strong><%= doll.cursed %></p>
+            </div>
+      </div>
+    <% end %>
   <% end %>
 </div>
   <div class="btn-ghost-log-out pt-2 pb-2 mb-5 mt-2">
