--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -37,8 +37,11 @@ a {
     margin: 2em;
   }
 
-  .sign-in {
+  #form-background {
+    background-color: #ddc8c4;
+  }
 
+  .sign-in {
     background-color: #ddc8c4;
     background-image: linear-gradient(180deg, #ddc8c4 1%, #6b4d57 98%, #896a67 99%);
     // background-color: #ddc8c4;
