--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
-       <%= link_to "Delightful Dolls", dolls_path, class: "navbar-brand $headers-font" %>
+       <%= link_to "Delightful Dolls", user_signed_in? ? dolls_path : root_path, class: "navbar-brand $headers-font" %>
     <div class="collapse navbar-collapse" id="navbarRightAlignExample">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <% if controller_name != 'sessions' && action_name != 'new' %>
