--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -37,9 +37,9 @@ a {
     margin: 2em;
   }
 
-  #form-background {
-    background-color: #ddc8c4;
-  }
+  // #form-background {
+  //   background-color: #ddc8c4;
+  // }
 
   .sign-in {
     background-color: #ddc8c4;
