--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,7 +1,10 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
+@import "banner";
 @import "form_legend_clear";
 @import "navbar";
 @import "card";
+@import "showcard";
+@import "cards";
 @import "button";
