--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -13,14 +13,16 @@
 }
 
 .btn-ghost:hover {
-  background: $deep-taupe;
+  transform: scale(1.05);
   color: black;
   text-decoration: none;
 }
 .btn-ghost-log-out {
   color: black;
   border: 1px solid #4A4A4A;
-  width: 20%;
+  padding-left: 20px;
+  padding-right: 20px;
+
   text-align: center;
   border-radius: 50px;
   font-weight: lighter;
@@ -32,7 +34,7 @@
 
 .btn-ghost-log-out:hover {
   background: $deep-taupe;
-  color: black;
+  color: white;
   text-decoration: none;
 }
 
@@ -41,11 +43,13 @@
   color: black;
   text-decoration: none;
 }
+
 .btn-ghost-log-out a:visited {
   opacity: 1;
   color: black;
   text-decoration: none;
 }
+
 a:active {
   opacity: 1;
   color: black;
@@ -55,5 +59,4 @@ a:active {
 a {
   text-decoration: none;
   color: black;
-
 }
