--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -14,6 +14,10 @@
 
 .navbar .navbar-collapse * {
   color: white;
+  font-size: 25px;
+}
+.navbar .navbar-collapse a:hover {
+  color: black;
 }
 
 .navbar .navbar-brand img {
