--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,12 @@
 // Specific CSS for your home-page
 a {
   text-decoration: none;
+  font-family: $headers-font;
+  font-size: 25px;
+}
+
+a:hover {
+  color: white;
 }
 
 .landing-page {
@@ -37,10 +43,6 @@ a {
     margin: 2em;
   }
 
-  // #form-background {
-  //   background-color: #ddc8c4;
-  // }
-
   .sign-in {
     background-color: #ddc8c4;
     background-image: linear-gradient(180deg, #ddc8c4 1%, #6b4d57 98%, #896a67 99%);
@@ -51,7 +53,7 @@ a {
   }
 }
 
-  .create {
+.create {
     background-color: $pale-silver;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -63,6 +65,6 @@ a {
   margin-top: 50px;
   margin-bottom: 50px;
   padding: 50px;
-  background-color:#ddc8c4;
+  background-color: $deep-taupe;
   border-radius: 5px;
 }
