--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,9 +6,9 @@
         <p class="lead">Feeling loney? </p>
         <p class="lead">Your loneliness ends now!</p>
         <p class="lead">Rent a doll and find inner peace. </p>
-        <%= link_to "Log in", new_user_session_path, class: "btn-ghost-log-out p-2 mb-5 mt-2" %>
+        <%= link_to "Log in", new_user_session_path, class: "btn-ghost-log-out" %>
         <%# <p><a href="#" class="btn btn-primary shadow mr-2">Log in</a> %>
-        <a href="#" class="btn-ghost-log-out p-2 mb-5 mt-2">Sign up</a></p>
+        <a href="#" class="btn-ghost-log-out">Sign up</a></p>
       </div>
 
       <div></div>
@@ -24,17 +24,22 @@
 <h1>Want to find out more...</h1>
   <div class="cards">
     <% @dolls.limit(3).each do |doll| %>
-    <div class="card-product mt-3 mb-3">
-        <img src="<%= doll.image %>">
-        <div class="card-product-infos">
-          <h2 class="large-font"><%= link_to "#{doll.name.capitalize}", doll_path(doll)%></h2>
-          <p><strong>Condition:</strong><%= "  #{doll.condition.capitalize}" %></p>
-          <p><strong>Cursed:</strong><%= "  #{doll.cursed}" %></p>
-        </div>
-    </div>
+    <%= link_to doll_path(doll) do %>
+      <div class="card-product mt-2 mb-3">
+            <img src="<%= doll.image %>">
+            <div class="card-product-infos">
+              <h2 class="large-font"><%= doll.name.capitalize %></h2>
+              <p>Condition: <%= doll.condition.capitalize %></p>
+              <p>Cursed: <%= doll.cursed %></p>
+            </div>
+      </div>
+      <% end %>
     <% end %>
 </div>
 </div>
+
+
+
 
 
  <%# <div class="row">
