--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,8 +7,9 @@
         <p class="lead">Your loneliness ends now!</p>
         <p class="lead">Rent a doll and find inner peace. </p>
         <%= link_to "Log in", new_user_session_path, class: "btn-ghost-log-out" %>
+        <%= link_to "Sign up", new_user_registration_path, class: "btn-ghost-log-out" %>
         <%# <p><a href="#" class="btn btn-primary shadow mr-2">Log in</a> %>
-        <a href="#" class="btn-ghost-log-out">Sign up</a></p>
+        <%# <a href="#" class="btn-ghost-log-out">Sign up</a></p> %>
       </div>
 
       <div></div>
