--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,8 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">My profile</a>
+            <%= link_to "My profile", user_path(current_user), class: "nav-link"  %>
+            <%# <a class="nav-link" href="#">My profile</a> %>
           </li>
 
           <li class="nav-item">
