added back button on user show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,3 +18,7 @@
     </div>
   </div>
 </div>
+
+<div class="container d-flex align-items-center justify-content-center">
+  <%=  link_to 'Go back', dolls_path, class:"btn btn-ghost mb-5 mt-3 mx-auto" %>
+</div>
