added username to navbar. font-family is instyle for now

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,13 +6,16 @@
 
         <%# Don't display the menus of the navbar if user is loging in or signing up %>
         <% if current_user %>
+          <li class="nav-item nav-link" style="font-family: 'Alumni Sans Pinstripe';">
+            Welcome, <%= @user.first_name %>
+          </li>
+
           <li class="nav-item">
-          <%= link_to "Dolls", dolls_path, class: "nav-link" %>
+            <%= link_to "Dolls", dolls_path, class: "nav-link" %>
           </li>
 
           <li class="nav-item">
             <%= link_to "My profile", user_path(current_user), class: "nav-link"  %>
-            <%# <a class="nav-link" href="#">My profile</a> %>
           </li>
 
           <li class="nav-item">
