moved 'create new doll' button to user profile page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
       <ul class="list-group list-group-flush">
         <li class="list-group-item">Email: <%= @user.email %> </li>
         <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
+        <li class="list-group-item mb-2 mt-2"><%= link_to "Create a new doll", new_doll_path, class:"btn-ghost-log-out pt-2 pb-2" %> </li>
       </ul>
       <div class="card-body">
         <a href="#" class="card-link">Card link</a>
@@ -22,3 +22,7 @@
 <div class="container d-flex align-items-center justify-content-center">
   <%=  link_to 'Go back', dolls_path, class:"btn btn-ghost mb-5 mt-3 mx-auto" %>
 </div>
+
+  <div class="btn-ghost-log-out pt-2 pb-2 mb-5 mt-2">
+    <%= link_to "Create a new doll", new_doll_path %>
+  </div>
