--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,9 +11,26 @@
         <li class="list-group-item">A second item</li>
         <li class="list-group-item mb-2 mt-2"><%= link_to "Create a new doll", new_doll_path, class:"btn-ghost-log-out pt-2 pb-2" %> </li>
       </ul>
+
+      <%# Show all dolls belonging to current user %>
       <div class="card-body">
-        <a href="#" class="card-link">Card link</a>
-        <a href="#" class="card-link">Another link</a>
+        <li class="list-group-item">
+        <h2>Your owned dolls...</h2>
+        <div class="cards d-flex flex-column">
+          <% current_user.dolls.each do |doll| %>
+            <%= link_to doll_path(doll) do %>
+              <div class="card-product mt-2 mb-3">
+                    <img src="<%= doll.image %>">
+                    <div class="card-product-infos">
+                      <h2 class="large-font"><%= doll.name.capitalize %></h2>
+                      <p>Condition: <%= doll.condition.capitalize %></p>
+                      <p>Cursed: <%= doll.cursed %></p>
+                    </div>
+              </div>
+            <% end %>
+          <% end %>
+  </div>
+        </li>
       </div>
     </div>
   </div>
