--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,13 +3,16 @@
     <div class="card" style="width: 40rem;">
       <img src="..." class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title"><%= @user.full_name %></h5>
+        <h1 class="card-title"><%= @user.full_name %></h1>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       </div>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">Email: <%= @user.email %> </li>
         <li class="list-group-item">A second item</li>
-        <li class="list-group-item mb-2 mt-2"><%= link_to "Create a new doll", new_doll_path, class:"btn-ghost-log-out pt-2 pb-2" %> </li>
+        <li class="list-group-item mb-2 mt-2">
+          <%= link_to "View your bookings", user_path(current_user), class:"btn-ghost-log-out pt-2 pb-2" %>
+          <%= link_to "Create a new doll", new_doll_path, class:"btn-ghost-log-out pt-2 pb-2" %>
+        </li>
       </ul>
 
       <%# Show all dolls belonging to current user %>
