added function to upload image to new doll

--- a/app/views/dolls/new.html.erb
+++ b/app/views/dolls/new.html.erb
@@ -7,6 +7,7 @@
     <%= f.input :condition %>
     <%= f.input :description %>
     <%= f.input :cursed, as: :boolean %>
+    <%= f.input :photo, as: :file %>
     <%= f.submit 'Create a new doll', class: "btn btn-ghost mb-5 mt-2" %>
 
   <% end %>
