--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
           </li>
 
           <li class="nav-item">
-            <%= link_to "My profile", user_path(current_user), class: "nav-link"  %>
+            <%= link_to "My profile", my_profile_path, class: "nav-link"  %>
           </li>
 
           <li class="nav-item">
