--- a/app/views/users/my_profile.html.erb
+++ b/app/views/users/my_profile.html.erb
@@ -1,13 +1,17 @@
 <div class="container w-75">
   <div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
     <div class="card" style="width: 40rem;">
-      <img src="..." class="card-img-top" alt="...">
+      <div class="d-flex justify-content-center p-5">
+        <%= cl_image_tag current_user.photo.key, height: 150, width: 150, crop: :fill, :radius => 100 %>
+      </div>
+
       <div class="card-body">
-        <h1 class="card-title"><%= @user.full_name %></h1>
+        <h1 class="card-title"><%= current_user.full_name %></h1>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       </div>
+
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">Email: <%= @user.email %> </li>
+        <li class="list-group-item">Email: <%= current_user.email %> </li>
         <li class="list-group-item">A second item</li>
         <li class="list-group-item mb-2 mt-2">
           <%= link_to "View your bookings", user_path(current_user), class:"btn-ghost-log-out pt-2 pb-2" %>
@@ -23,16 +27,16 @@
           <% current_user.dolls.each do |doll| %>
             <%= link_to doll_path(doll) do %>
               <div class="card-product mt-2 mb-3">
-                    <%= cl_image_tag doll.photo.key %>
-                    <div class="card-product-infos">
-                      <h2 class="large-font"><%= doll.name.capitalize %></h2>
-                      <p>Condition: <%= doll.condition.capitalize %></p>
-                      <p>Cursed: <%= doll.cursed %></p>
-                    </div>
+                <%= cl_image_tag doll.photo.key %>
+                <div class="card-product-infos">
+                  <h2 class="large-font"><%= doll.name.capitalize %></h2>
+                  <p>Condition: <%= doll.condition.capitalize %></p>
+                  <p>Cursed: <%= doll.cursed %></p>
+                </div>
               </div>
             <% end %>
           <% end %>
-  </div>
+        </div>
         </li>
       </div>
     </div>
@@ -42,7 +46,3 @@
 <div class="container d-flex align-items-center justify-content-center">
   <%=  link_to 'Go back', dolls_path, class:"btn btn-ghost mb-5 mt-3 mx-auto" %>
 </div>
-
-  <div class="btn-ghost-log-out pt-2 pb-2 mb-5 mt-2">
-    <%= link_to "Create a new doll", new_doll_path %>
-  </div>
