added bio text input in signup form

--- a/app/views/users/my_profile.html.erb
+++ b/app/views/users/my_profile.html.erb
@@ -7,7 +7,7 @@
 
       <div class="card-body">
         <h1 class="card-title"><%= current_user.full_name %></h1>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="card-text"><%= current_user.bio %></p>
       </div>
 
       <ul class="list-group list-group-flush">
