--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,6 +15,8 @@
                   required: true,
                   autofocus: true,
                   input_html: { autocomplete: "last-name" }%>
+      <%= f.input :bio,
+                  required: true %>
       <%= f.input :email,
                   required: true,
                   autofocus: true,
