--- a/app/views/users/my_profile.html.erb
+++ b/app/views/users/my_profile.html.erb
@@ -1,7 +1,9 @@
 <div class="container w-75">
   <div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
-    <div class="card" style="width: 40rem;">
-      <div class="d-flex justify-content-center p-5">
+    <div class="card p-5" style="width: 40rem;">
+      <div class="d-flex justify-content-center p-3">
+
+        <% current_user.photo.key %>
         <%= cl_image_tag current_user.photo.key, height: 150, width: 150, crop: :fill, :radius => 100 %>
       </div>
 
