--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -19,17 +19,21 @@
 }
 .btn-ghost-log-out {
   color: black;
-  border: 1px solid #4A4A4A;
-  padding-left: 20px;
-  padding-right: 20px;
+  border: 1px solid black;
+  padding-left: 12px;
+  padding-right: 12px;
+  padding-top: 12px;
+  padding-bottom: 12px;
 
   text-align: center;
-  border-radius: 50px;
+  border-radius: 4px;
   font-weight: lighter;
+  font-size: 1rem;
   opacity: 0.6;
   transition: opacity 0.3s ease;
   text-decoration: none;
-  background: $mint-cream;
+  background: white;
+
 }
 
 .btn-ghost-log-out:hover {
