--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,10 +1,12 @@
 .card-product {
   overflow: hidden;
   height: 120px;
-  background: $deep-taupe;
+  background: #E8E9EB;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
+  border-radius: 5px;
+
 }
 
 .card-product img {
@@ -19,6 +21,7 @@
   font-weight: bold;
   margin: 0;
   padding-top: 12px;
+  color: black;
 }
 
 .card-product p {
@@ -28,6 +31,7 @@
   line-height: 1.2;
   margin-bottom: 12px;
   margin-top: 10px;
+  color: black;
 }
 
 .card-product-infos {
