--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,11 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe&family=Open+Sans:wght@300;500&display=swap');
+
 </style>
   </head>
 
-  <body>
+  <body class= <%= current_page?(root_path) ? "background-home" : "" %> >
 
     <%# Show navbar if not on landing page %>
     <% if controller_name != 'pages' && action_name != 'home' %>
