--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,11 @@
 <section class="bg-light landing-page">
-  <div class="container d-flex justify-content-center">
-    <div class="row align-items-center text-center">
-      <div class="col-lg-6 order-2 order-lg-1 border sign-in mt-5">
+  <div class="container d-flex justify-content-left">
+    <div class="row align-items-center">
+      <div class="col-lg-8 order-2 order-lg-1 mt-1">
         <h1>Delightful Dolls</h1>
         <p class="lead">Feeling loney? </p>
         <p class="lead">Your loneliness ends now!</p>
-        <p class="lead">Rent a doll and find inner peace. </p>
+        <p class="lead pb-3">Rent a doll and find inner peace. </p>
         <%= link_to "Log in", new_user_session_path, class: "btn-ghost-log-out" %>
         <%= link_to "Sign up", new_user_registration_path, class: "btn-ghost-log-out" %>
         <%# <p><a href="#" class="btn btn-primary shadow mr-2">Log in</a> %>
@@ -14,9 +14,7 @@
 
       <div></div>
 
-      <div class="col-lg-6 order-1 order-lg-2">
-        <img src="https://res.cloudinary.com/dug5dmhjs/image/upload/v1661282164/production/doll_bg_coxdrr.png" alt="landing image" class="img-fluid">
-      </div>
+
     </div>
   </div>
 
@@ -36,7 +34,7 @@
       </div>
       <% end %>
     <% end %>
-</div>
+  </div>
 </div>
 
 
