changed doll user card

--- a/app/views/dolls/show.html.erb
+++ b/app/views/dolls/show.html.erb
@@ -7,18 +7,19 @@
   <% end %>
 
 <div class="container w-80 d-flex">
-  <div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
-    <div class="card p-4 bg-light.bg-gradient">
-      <div class=" image d-flex flex-column justify-content-center align-items-center">
-        <%= cl_image_tag @doll.photo.key %>
-        <span class="name mt-3" ><%= @doll.name %></span>
-        <span class="state mt-3">Cursed: <%=curse%></span>
-        <span class="condition mt-3">Condition: <%= @doll.condition %></span>
-        <span class="condition mt-3"><strong>Description: </strong><%= @doll.description %></span>
-      </div>
-    </div>
-  </div>
 
+<div class="card mt-4 mb-4 p-3" style="width: 20rem;">
+  <%= cl_image_tag @doll.photo.key %>
+  <div class="card-body">
+    <h5 class="card-title"><%= @doll.name %></h5>
+    <p class="card-text"><strong>Description: </strong><%= @doll.description %></p>
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">Cursed: <%=curse%></li>
+    <li class="list-group-item">Condition: <%= @doll.condition %></li>
+    <li class="list-group-item">A third item</li>
+  </ul>
+</div>
 
   <div class="mt-5 mb-5 p-3 mx-auto create">
     <h1>Create a booking</h1>
@@ -31,7 +32,7 @@
 </div>
 
 
-  
+
   <div class="container d-flex align-items-center justify-content-center">
 
     <%# Only show 'delete doll' button if doll belongs to current user %>
