update booking updated

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -10,6 +10,7 @@
   <p><strong>Start date:</strong> <%= booking.start_date %></p>
   <p><strong>end date:</strong> <%= booking.end_date %></p>
   <%= link_to "Delete", booking_path(booking), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class:"btn btn-ghost mb-5 mt-3 mx-auto"  %>
+  <%= link_to "Edit booking", edit_booking_path(booking), class:"btn btn-ghost mb-5 mt-3 mx-auto"  %>
 </div>
 <% end %>
 </div>
