--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,7 +1,6 @@
 .btn-ghost {
   color: black;
-  padding-left: 12px;
-  padding-right: 12px;
+  padding: 8px;
   border: 1px solid #4A4A4A;
   text-align: center;
   border-radius: 50px;
