--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,7 +2,7 @@
 a {
   text-decoration: none;
   font-family: 'Raleway';
-  font-size: 25px;
+
 }
 
 a:hover {
@@ -61,6 +61,10 @@ a:hover {
     background-color: $pale-silver;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    height: 100%;
+    padding: 25px;
+    margin-left: 25px;
+    width: 30%;
   }
 
 
