--- a/app/views/dolls/index.html.erb
+++ b/app/views/dolls/index.html.erb
@@ -1,12 +1,12 @@
 <div class="container  mt-3">
-  <h1 class="mt-2">Select your doll...</h1>
+  <h2 class="mt-2">Select your doll...</h2>
   <div class="cards">
     <% @dolls.each do |doll| %>
       <%= link_to doll_path(doll) do %>
         <div class="card-product mt-2 mb-3">
               <%= cl_image_tag doll.photo.key %>
               <div class="card-product-infos">
-                <h2 class="large-font"><%= doll.name.capitalize %></h2>
+                <h2><%= doll.name.capitalize %></h2>
                 <p>Condition: <%= doll.condition.capitalize %></p>
                 <p>Cursed: <%= doll.cursed %></p>
               </div>
