--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,19 +6,19 @@
 
         <%# Don't display the menus of the navbar if user is loging in or signing up %>
         <% if current_user %>
-          <li class="nav-item nav-link" style="font-family: 'Alumni Sans Pinstripe';">
+          <li class="nav-item nav-link pl-2">
             Welcome, <%= current_user.first_name %>
           </li>
 
-          <li class="nav-item">
+          <li class="nav-item pl-2">
             <%= link_to "Dolls", dolls_path, class: "nav-link" %>
           </li>
 
-          <li class="nav-item">
+          <li class="nav-item pl-2">
             <%= link_to "My profile", my_profile_path, class: "nav-link"  %>
           </li>
 
-          <li class="nav-item">
+          <li class="nav-item pl-2">
             <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link" %>
           </li>
         <% end %>
