--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,7 +2,8 @@
   justify-content: space-between;
   background: $deep-taupe;
   height: 20%;
-
+  position: sticky;
+  top: 0;
 }
 .navbar * {
   color: white;
