--- a/app/views/users/my_profile.html.erb
+++ b/app/views/users/my_profile.html.erb
@@ -31,14 +31,7 @@
         <div class="cards d-flex flex-column">
           <% current_user.dolls.each do |doll| %>
             <%= link_to doll_path(doll) do %>
-              <div class="card-product mt-2 mb-3">
-                <%= cl_image_tag doll.photo.key %>
-                <div class="card-product-infos">
-                  <h2 class="large-font"><%= doll.name.capitalize %></h2>
-                  <p>Condition: <%= doll.condition.capitalize %></p>
-                  <p>Cursed: <%= doll.cursed %></p>
-                </div>
-              </div>
+              <%= render '/shared/doll_card_small', doll: doll %>
             <% end %>
           <% end %>
         </div>
