searxh bar added in

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -19,10 +19,7 @@
 .btn-ghost-log-out {
   color: black;
   border: 1px solid black;
-  padding-left: 12px;
-  padding-right: 12px;
-  padding-top: 12px;
-  padding-bottom: 12px;
+  padding: 7px;
 
   text-align: center;
   border-radius: 4px;
