changed login page

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar {
   justify-content: space-between;
-  background: $deep-taupe;
+  background: $black;
   height: 20%;
   position: sticky;
   top: 0;
