--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,11 +1,11 @@
 // Define variables for your color scheme
 
 
-$mint-cream: #eff9f0;
-$pale-silver: #DDC8C4;
-$deep-taupe: #896A67;
-$eggplant: #6B4D57;
-$xicketic: #13070C;
+$white: #FFFFFF;
+$light-purple: #610094;
+$purple: #3F0071;
+$dark-purple: #150050;
+$black: #13070C;
 
 
 // For example:
