--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,15 +1,3 @@
-<footer class="bg-light text-center text-lg-start d-flex mt-auto">
-  <div class="container p-4" style="background-color: rgba(0, 0, 0, 0.2);">
-    <div class="row">
-      <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-      </div>
-
-      <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-      </div>
-    </div>
-  </div>
-   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-    © 2022 Copyright:
-    <a class="text-dark" href="#">DelightfulDolls</a>
-  </div>
+<footer class="footer">
+  <p>© 2022 Copyright: DelightfulDolls</p>
 </footer>
